Fix dark mode styling on first load if dark mode is system preference
Previously, these three elements only checked for data-theme="dark",
which is not set if the page is first loaded and dark mode is the system
default.

--- a/assets/sass/layout.scss
+++ b/assets/sass/layout.scss
@@ -113,6 +113,11 @@ aside {
       :root[data-theme="dark"] & {
         filter: invert(1);
       }
+      @media screen and (prefers-color-scheme: dark) {
+        :root:not([data-theme="light"]) & {
+          filter: invert(1);
+        }
+      }
     }
 
 
